# health_insurance_cs

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
insurance_classifier/: __init__.py  dataset.py  features.py  plots.py
insurance_classifier/modeling/: predict.py  train.py
models/: xgb_v01.joblib
notebooks/: 0-ims-data-wrangling.ipynb  0.01-ims-data-wrangling.ipynb  1-ims-data-exploration.ipynb  1.01-ims-data-exploration.ipynb  2-ims-modeling.ipynb  2.01-ims-modeling.ipynb
parameters/: age_scaler.joblib  annual_premium_scaler.joblib  region_code_james_stein.joblib  vintage_scaler.joblib
