[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "insurance_classifier"
version = "0.0.1"
description = "A health insurance model to get information about client interebuy a new insurance product"
authors = [
  { name = "Iury Martins Silva" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "boruta>=0.4.3",
    "category-encoders>=2.8.1",
    "imbalanced-learn>=0.14.0",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "missingno>=0.5.2",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["insurance_classifier"]
include = ["pyproject.toml", "insurance_classifier/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["insurance_classifier"]
force-sort-within-sections = true

